--- a/Frontend/views/carrito.ejs
+++ b/Frontend/views/carrito.ejs
@@ -20,7 +20,8 @@
                     </div>
                 <% }); %>
             <% } %>
-            <button id="checkout-button">Proceder al pago</button>
+            <button id="clear-cart-btn">Vaciar carrito</button>
+            <button id="checkout-btn">Proceder al pago</button>
         </div>
     </div>
 </body>
