--- a/Frontend/views/iniciarSs.ejs
+++ b/Frontend/views/iniciarSs.ejs
@@ -19,6 +19,7 @@
             </div>
             <button type="submit">Empieza a Comprar!</button>
         </form>
+        <h3>No tienes cuenta? <a href="/registrar">Regístrate aquí</a></h3>
     </div>
     <a href="">Regresar a la bienvenida</a>
 </body>
