--- a/Frontend/views/carrito.ejs
+++ b/Frontend/views/carrito.ejs
@@ -17,6 +17,7 @@
                         <h2><%= item.nombre %></h2>
                         <p>Cantidad: <%= item.cantidad %></p>
                         <p>Precio: $<%= item.precio %></p>
+                        <p>Categoria: <%= item.categoria %></p>
                     </div>
                 <% }); %>
             <% } %>
