--- a/Frontend/views/main.ejs
+++ b/Frontend/views/main.ejs
@@ -13,6 +13,7 @@
                 <div class="definicion-producto">
                     <h2><%= producto.nombre %></h2>
                     <p>Precio: $<%= producto.precio %></p>
+                    <p>Categoria: <%= producto.categoria %></p>
                 </div>
                 <button class="agregar-carrito" data-id="<%= producto.id %>">Agregar al carrito</button>
             </div>
