hago las relaciones de los links para llevar a las paginas correspondientes (las q van de momento)

--- a/Frontend/views/crearAcc.ejs
+++ b/Frontend/views/crearAcc.ejs
@@ -27,9 +27,9 @@
                 <input type="password" id="confirmPassword" name="confirmPassword" onkeypress="verificar(event)" required>
             </div>
             <button type="submit" onsubmit="return validarCrearCuenta()">Crear cuenta</button>
-            <div><h3>Tienes una cuenta? <a href="" class="btn-iniciarss">Inicia sesión</a></h3></div>
+            <div><h3>Tienes una cuenta? <a href="/views/iniciarSs" class="btn-iniciarss">Inicia sesión</a></h3></div>
         </form>
-        <a href="" class="btn-regresar" >Regresar a la bienvenida</a>
+        <a href="/views/bienvenida" class="btn-regresar" >Regresar a la bienvenida</a>
     </div>
 </body>
 </html>
