--- a/Frontend/views/iniciarSs.ejs
+++ b/Frontend/views/iniciarSs.ejs
@@ -20,8 +20,8 @@
             </div>
             <button type="submit" onsubmit="return validarIniciarSesion()">Empieza a Comprar!</button>
         </form>
-        <h3>No tienes cuenta? <a href="/registrar">Regístrate aquí</a></h3>
+        <h3>No tienes cuenta? <a href="/views/crearAcc">Regístrate aquí</a></h3>
     </div>
-    <a href="">Regresar a la bienvenida</a>
+    <a href="/views/bienvenida">Regresar a la bienvenida</a>
 </body>
 </html>
