--- a/Frontend/views/bienvenida.html
+++ b/Frontend/views/bienvenida.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    
+    <div class="conrtainer-main">
+        <h1>Bienvenido a la tienda de productos</h1>
+        <div class="btn-bienvenida">
+            <a href="/views/crearAcc" class="btn-crearcuenta">Crear cuenta</a>
+            <a href="/views/iniciarSs" class="btn-iniciarss">Iniciar sesión</a>
+        </div>
+    </div>
 </body>
 </html>
