hago las relaciones de las funciones para llamar los datos de la bd correspondientemente a las tablas en los archivos usados para las ventas y la cuenta

--- a/Frontend/views/cuenta.ejs
+++ b/Frontend/views/cuenta.ejs
@@ -10,8 +10,8 @@
     <div class="container-account">
         <h1>Tu cuenta</h1>
         <div class="account-details">
-            <p><strong>Nombre:</strong> <%= user.nombre %></p>
-            <p><strong>Email:</strong> <%= user.email %></p>
+            <p><strong>Nombre:</strong> <%= usuario.UserName %></p>
+            <p><strong>Email:</strong> <%= usuario.Correo %></p>
         </div>            
         <a href="">Editar cuenta</a>
         <a href="">Cerrar sesión</a>
