--- a/Frontend/views/historial.ejs
+++ b/Frontend/views/historial.ejs
@@ -10,21 +10,21 @@
     <div class="container-carrito">
         <h1>Historial de Compras</h1>
         <div class="carrito-items">
-            <% if(historial.length === 0) { %>
+            <% if(ventas.length === 0) { %>
                 <p>No has realizado ninguna compra aún.</p>
             <% } else { %>
-                <% historial.forEach(function(compra) { %>
+                <% ventas.forEach(function(compra) { %>
                     <div class="compra">
-                        <h2>Compra ID: <%= compra.id %></h2>
-                        <p>Fecha: <%= compra.fecha %></p>
+                        <h2>Compra ID: <%= compra.ID %></h2>
+                        <p>Fecha de compra: <%= compra["fecha de compra"] %></p>
                         <ul>
                             <% compra.items.forEach(function(item) { %>
                                 <li>
-                                    <%= item.nombre %> - Cantidad: <%= item.cantidad %> - Precio: $<%= item.precio %> - Categoria: <%= item.categoria %>
+                                    <%= item.Nombre %> - Cantidad: <%= item.cantidad %> - Precio: $<%= item.Precio %> - Categoria: <%= item.Categoria %>
                                 </li>
                             <% }); %>
                         </ul>
-                        <p>Total: $<%= compra.total %></p>
+                        <p>Total: $<%= compra["precio total"] %></p>
                     </div>
                 <% }); %>
             <% } %>
