--- a/Frontend/views/main.ejs
+++ b/Frontend/views/main.ejs
@@ -9,14 +9,15 @@
 <body>
     <h1>Nuestros productos:</h1>
     <div class="container-productos">
-        <% productos.forEach(function(producto) { %>
+        <% inventario.forEach(function(inventario) { %>
             <div class="caja-producto">
                 <div class="definicion-producto">
-                    <h2><%= producto.nombre %></h2>
-                    <p>Precio: $<%= producto.precio %></p>
-                    <p>Categoria: <%= producto.categoria %></p>
+                    <h2><%= inventario.Nombre %></h2>
+                    <p>Precio: $<%= inventario.Precio %></p>
+                    <p>Categoria: <%= inventario.Categoria %></p>
+                    <p>Cantidad disponible: <%= inventario.Stock %></p>
                 </div>
-                <button class="agregar-carrito" data-id="<%= producto.id %>">Agregar al carrito</button>
+                <button class="agregar-carrito" data-id="<%= inventario.ID %>">Agregar al carrito</button>
             </div>
         <% }); %>
     </div>
