--- a/Frontend/views/main.ejs
+++ b/Frontend/views/main.ejs
@@ -7,19 +7,29 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
+    <div class="header-actions">
+        <a href="/carrito/<%= usuarioID %>" class="btn-carrito">Ver Carrito</a>
+        <a href="/historial/<%= usuarioID %>" class="btn-historial">Ver Historial</a>
+    </div>
+    
     <h1>Nuestros productos:</h1>
     <div class="container-productos">
-        <% inventario.forEach(function(inventario) { %>
-            <div class="caja-producto">
-                <div class="definicion-producto">
-                    <h2><%= inventario.Nombre %></h2>
-                    <p>Precio: $<%= inventario.Precio %></p>
-                    <p>Categoria: <%= inventario.Categoria %></p>
-                    <p>Cantidad disponible: <%= inventario.Stock %></p>
+        <% if(productos.length === 0) { %>
+            <p>No hay productos disponibles en este momento.</p>
+        <% } else { %>
+            <% productos.forEach(function(item) { %>
+                <div class="caja-producto">
+                    <div class="definicion-producto">
+                        <h2><%= item.nombre %></h2>
+                        <p>Precio: $<%= item.precio %></p>
+                        <p>Categoria: <%= item.categoria %></p>
+                        <p>Cantidad disponible: <%= item.stock %></p>
+                    </div>
+                    <input type="number" class="cantidad-input" data-nombre="<%= item.nombre %>" min="1" max="<%= item.stock %>" value="1">
+                    <button class="agregar-carrito" data-nombre="<%= item.nombre %>">Agregar al carrito</button>
                 </div>
-                <button class="agregar-carrito" data-id="<%= inventario.ID %>">Agregar al carrito</button>
-            </div>
         <% }); %>
+        <% } %>
     </div>
 </body>
 </html>
