se hacen  modificaciones en todo lo del front para poder mandar a llamar de forma exitosa los endpoints asi como tener una conexion exitosa en en los ejs

--- a/Frontend/views/carrito.ejs
+++ b/Frontend/views/carrito.ejs
@@ -9,7 +9,7 @@
 <body>
     <div class="carrito-container">
         <h1>Tu carrito de compras</h1>
-        <a href="/" class="btn-regresar">Regresar a la tienda</a>
+        <a href="/?usuarioID=<%= usuarioID %>" class="btn-regresar">Regresar a la tienda</a>
         <div class="carrito-items">
             <% if(!carrito || carrito.length === 0) { %>
                 <p>Tu carrito está vacío.</p>
@@ -28,5 +28,8 @@
             <button id="checkout-btn">Proceder al pago</button>
         </div>
     </div>
+
+    <div data-usuario-id="<%= usuarioID %>" style="display:none;"></div>
+    <script src="/js/carrito.js"></script>
 </body>
 </html>
