--- a/Frontend/views/editarCuenta.ejs
+++ b/Frontend/views/editarCuenta.ejs
@@ -9,22 +9,28 @@
 <body>
     <div class="container-form">
         <h2>Edita tu cuenta</h2>
-        <form action="/editarAcc" method="POST">
+        <form id="editAccountForm" data-usuario-id="<%= usuario.ID %>">
             <div class="form-group">
                 <label for="username">Nombre de usuario:</label>
-                <input type="text" id="username" name="username" onkeypress="verificar(event)" required value="<%= usuario.UserName %>">
+                <input type="text" id="username" name="username" required value="<%= usuario.UserName %>">
+            </div>
+            <div class="form-group">
+                <label for="email">Correo electrónico:</label>
+                <input type="email" id="email" name="email" required value="<%= usuario.Correo %>">
             </div>
             <div class="form-group">
                 <label for="password">Contraseña:</label>
-                <input type="password" id="password" name="password" onkeypress="verificar(event)" required value="<%= usuario.Contraseña %>">
+                <input type="password" id="password" name="password" required value="<%= usuario.Contraseña %>">
             </div>
             <div class="form-group">
                 <label for="confirmPassword">Confirmar contraseña:</label>
-                <input type="password" id="confirmPassword" name="confirmPassword" onkeypress="verificar(event)" required value="<%= usuario.Contraseña %>">
+                <input type="password" id="confirmPassword" name="confirmPassword" required value="<%= usuario.Contraseña %>">
             </div>
-            <button type="submit" onsubmit="return validarEditarCuenta()">Guardar cambios</button>
+            <button type="submit">Guardar cambios</button>
         </form>
-        <a href="/views/cuenta" class="btn-regresar" >Cancelar</a>
+        <a href="/cuenta/<%= usuario.ID %>" class="btn-regresar">Cancelar</a>
     </div>
+
+    <script src="/js/editarCuenta.js"></script>
 </body>
 </html>
