--- a/Frontend/views/main.ejs
+++ b/Frontend/views/main.ejs
@@ -10,6 +10,7 @@
     <div class="header-actions">
         <a href="/carrito/<%= usuarioID %>" class="btn-carrito">Ver Carrito</a>
         <a href="/historial/<%= usuarioID %>" class="btn-historial">Ver Historial</a>
+        <a href="/iniciarSs" class="btn-iniciar-sesion">Iniciar Sesión</a>
         <a href="/cuenta/<%= usuarioID %>" class="btn-cuenta">Mi Cuenta</a>
     </div>
     
