render de inicio de sesion y creacion de la cuenta

--- a/Frontend/views/crearAcc.ejs
+++ b/Frontend/views/crearAcc.ejs
@@ -27,7 +27,7 @@
                 <input type="password" id="confirmPassword" name="confirmPassword" required>
             </div>
             <button type="submit">Crear cuenta</button>
-            <div><h3>Tienes una cuenta? <a href="/iniciarSs" class="btn-iniciarss">Inicia sesión</a></h3></div>
+            <div><h3>Tienes una cuenta? <a href="/render/iniciarSs" class="btn-iniciarss">Inicia sesión</a></h3></div>
         </form>
         <a href="/" class="btn-regresar">Regresar a la tienda</a>
     </div>
