--- a/Frontend/views/main.ejs
+++ b/Frontend/views/main.ejs
@@ -8,9 +8,13 @@
 </head>
 <body>
     <div class="header-actions">
+
         <a href="/carrito/<%= usuarioID %>" class="btn-carrito">Ver Carrito</a>
         <a href="/historial/<%= usuarioID %>" class="btn-historial">Ver Historial</a>
-        <a href="/iniciarSs" class="btn-iniciar-sesion">Iniciar Sesión</a>
+
+        <a href="/render/iniciarSs" class="btn-iniciar-sesion">Iniciar Sesión</a>
+
+
         <a href="/cuenta/<%= usuarioID %>" class="btn-cuenta">Mi Cuenta</a>
     </div>
     
