--- a/Frontend/views/crearAcc.ejs
+++ b/Frontend/views/crearAcc.ejs
@@ -9,7 +9,7 @@
 <body>
     <div class="container-form">
         <h2>Crear cuenta</h2>
-        <form id="registerForm">
+        <form id="registerForm" action="/" method="POST">
             <div class="form-group">
                 <label for="username">Nombre de usuario:</label>
                 <input type="text" id="username" name="username" required>
