--- a/Frontend/views/main.ejs
+++ b/Frontend/views/main.ejs
@@ -10,7 +10,7 @@
     <div class="header-actions">
         <nav>
             <% if(!usuarioID) { %>
-                <a href="/render/iniciarSs" class="btn-iniciar-sesion">Iniciar Sesión</a>   
+                <a href="/iniciarSs" class="btn-iniciar-sesion">Iniciar Sesión</a>   
                 <% } else { %>
                     <a href="/carrito/<%= usuarioID %>" class="btn-carrito">Ver Carrito</a>
                     <a href="/historial/<%= usuarioID %>" class="btn-historial">Ver Historial</a>
