se quita algo del merge xq no jalo jeje

--- a/Frontend/views/iniciarSs.ejs
+++ b/Frontend/views/iniciarSs.ejs
@@ -20,7 +20,7 @@
             </div>
             <button type="submit">Empieza a Comprar!</button>
         </form>
-        <h3>No tienes cuenta? <a href="/render/crearAcc">Regístrate aquí</a></h3>
+        <h3>No tienes cuenta? <a href="/crearAcc">Regístrate aquí</a></h3>
     </div>
     <a href="/">Regresar a la tienda</a>
 
