--- a/Frontend/views/carrito.ejs
+++ b/Frontend/views/carrito.ejs
@@ -15,14 +15,17 @@
                 <p>Tu carrito está vacío.</p>
             <% } else { %>
                 <% carrito.forEach(function(item) { %>
-                    <div class="carrito-item" data-carrito-id="<%= item.ID %>">
-                        <h2><%= item.Nombre %></h2>
-                        <p>Cantidad: <%= item.cantidad %></p>
-                        <p>Precio unitario: $<%= item.Precio %></p>
-                        <p>Total: $<%= (item.Precio * item.cantidad).toFixed(2) %></p>
-                        <button class="eliminar-producto-btn" data-carrito-id="<%= item.ID %>">Eliminar 1</button>
-                    </div>
+                    <% if(item.cantidad > 0) { %>
+                        <div class="carrito-item" data-carrito-id="<%= item.ID %>">
+                            <h2><%= item.Nombre %></h2>
+                            <p>Cantidad: <%= item.cantidad %></p>
+                            <p>Precio unitario: $<%= item.Precio %></p>
+                            <p>Total: $<%= (item.Precio * item.cantidad).toFixed(2) %></p>
+                            <button class="eliminar-producto-btn" data-carrito-id="<%= item.ID %>">Eliminar 1</button>
+                        </div>
+                    <% } %>
                 <% }); %>
+                <p>Total a pagar: $<%= carrito.reduce((total, item) => total + item.Precio * item.cantidad, 0).toFixed(2) %></p>
             <% } %>
             <button id="clear-cart-btn">Vaciar carrito</button>
             <button id="checkout-btn">Proceder al pago</button>
