lo mismo q el commit anterior jeje

--- a/Frontend/views/manipularProductos.ejs
+++ b/Frontend/views/manipularProductos.ejs
@@ -38,6 +38,7 @@
                         <p>Cantidad disponible: <%= item.stock %></p>
                     </div>
                     <button class="btn-eliminar-producto" data-id="<%= item.ID %>">Eliminar el producto</button>
+                    <button class="btn-modificar-producto" data-id="<%= item.ID %>">Modificar el producto</button>
                 </div>
         <% }); %>
         <% } %>
