arreglo de la visualizacion del codigo en red

--- a/Frontend/views/crearAcc.ejs
+++ b/Frontend/views/crearAcc.ejs
@@ -9,7 +9,10 @@
 <body>
     <div class="container-form">
         <h2>Crear cuenta</h2>
-        <form id="registerForm" action="/user/createUser" method="POST">
+        <form id="registerForm" action="/crearAcc" method="POST">
+            <% if (error) { %>
+                <p><%= error %></p>
+            <% } %>
             <div class="form-group">
                 <label for="username">Nombre de usuario:</label>
                 <input type="text" id="username" name="username" required>
@@ -31,7 +34,5 @@
         </form>
         <a href="/" class="btn-regresar">Regresar a la tienda</a>
     </div>
-
-    <script src="/js/registro.js"></script>
 </body>
 </html>
