se añaden lineas en el carrito para mostrar de forma mas responsiva los botones, asi como un select para poder elegir el metodo de pago, e igual un script para poder mostrar el boton final, espero a q el back haga conexciones y que el designer agregue diseño asi aca bn aca

--- a/Frontend/views/manipularProductos.ejs
+++ b/Frontend/views/manipularProductos.ejs
@@ -43,7 +43,7 @@
         <% }); %>
         <% } %>
     </div>
-    <h2>Regresar <a href="/">a la tienda</a></h2>
+    <h2 class="btn-regresar">Regresar <a href="/">a la tienda</a></h2>
 
     <script src="/js/productos.js"></script>
 </body>
