--- a/Frontend/views/carrito.ejs
+++ b/Frontend/views/carrito.ejs
@@ -26,13 +26,20 @@
                     <% } %>
                 <% }); %>
                 <p>Total a pagar: $<%= carrito.reduce((total, item) => total + item.Precio * item.cantidad, 0).toFixed(2) %></p>
+                <button id="clear-cart-btn">Vaciar carrito</button>
+                <select id="metodo-pago-select">
+                    <option>Seleccionar metodo de pago </option>
+                    <option id="Tarjeta-electronica" value="Tarjeta-electronica">Tarjeta de Credito/Debito</option>
+                    <option id="Peypal" value="Peypal">Peypal</option>
+                    <option id="Otzo" value="Otzo">Otzo</option>
+                </select>
+                <button id="checkout-btn" style="display: none;">Proceder al pago</button>
             <% } %>
-            <button id="clear-cart-btn">Vaciar carrito</button>
-            <button id="checkout-btn" onclick="window.location.href='/metodoPago/<%= usuarioID %>'">Proceder al pago</button>
         </div>
     </div>
 
     <div data-usuario-id="<%= usuarioID %>" style="display:none;"></div>
     <script src="/js/carrito.js"></script>
+    <script src="/js/pagos.js"></script>
 </body>
 </html>
