--- a/Frontend/views/manipularProductos.ejs
+++ b/Frontend/views/manipularProductos.ejs
@@ -40,11 +40,10 @@
                     <form method="POST" action="/manipularProductos/eliminar/<%= item.ID %>" onsubmit="return confirm('¿Eliminar este producto?')">
                         <button type="submit" class="btn-eliminar-producto">Eliminar el producto</button>
                     </form>
-                    <a class="btn-modificar-producto" href="/modificarProducto/<%= item.ID %>">Modificar el producto</a>
                 </div>
         <% }); %>
         <% } %>
     </div>
-    <h2 class="btn-regresar">Regresar <a href="/">a la tienda</a></h2>
+    <h2>Regresar <a href="/">a la tienda</a></h2>
 </body>
 </html>
