--- a/Frontend/views/main.ejs
+++ b/Frontend/views/main.ejs
@@ -18,7 +18,7 @@
                     
                     <%  if(usuarioID === '0') { %>
                     
-                        <a href="/productos" class="btn-productos">Administrar Productos</a>
+                        <a href="/manipularProductos" class="btn-productos">Administrar Productos</a>
                     <% } %>
             <% } %>
         </nav>
