--- a/Frontend/views/modificarProductos.ejs
+++ b/Frontend/views/modificarProductos.ejs
@@ -21,7 +21,7 @@
         <label for="stock">Cantidad en stock:</label>
         <input type="number" id="stock" name="stock" required value="<%= producto.stock %>"><br>
 
-        <button type="submit">Guardar cambios</button>
+        <button type="submit" onclick="return confirm('¿Estás seguro de que deseas guardar los cambios?')">Guardar cambios</button>
     </form>
     <h2>Regresar <a href="/manipularProductos">a la gestión de productos</a></h2>
 </body>
