--- a/Frontend/views/manipularProductos.ejs
+++ b/Frontend/views/manipularProductos.ejs
@@ -21,7 +21,7 @@
         <label for="stock">Cantidad en stock:</label>
         <input type="number" id="stock" name="stock" required><br>
 
-        <button type="submit">Agregar Producto</button>
+        <button type="submit" onclick="return validarProducto()">Agregar Producto</button>
     </form>
     
     <h1>Modifica los productos</h1>
@@ -37,7 +37,7 @@
                         <p>Categoria: <%= item.categoria %></p>
                         <p>Cantidad disponible: <%= item.stock %></p>
                     </div>
-                    <a href="/modificarProducto/<%= item.ID %>">test</a>
+                    <a href="/modificarProducto/<%= item.ID %>">Modificar la información</a>
                     <form method="POST" action="/manipularProductos/eliminar/<%= item.ID %>" onsubmit="return confirm('¿Eliminar este producto?')">
                         <button type="submit" class="btn-eliminar-producto">Eliminar el producto</button>
                     </form>
@@ -46,5 +46,6 @@
         <% } %>
     </div>
     <h2>Regresar <a href="/">a la tienda</a></h2>
+    <script src="/js/validaciones.js"></script>
 </body>
 </html>
