Se agrego imagen de fondo

--- a/Frontend/public/css/styles.css
+++ b/Frontend/public/css/styles.css
@@ -69,6 +69,11 @@ html {
 body {
     font-family: var(--fuente-principal);
     background-color: var(--blanco);
+    background-image: url('/images/decorations/Fondo-Pantalla.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     color: var(--color-texto);
     line-height: 1.6;
     min-height: 100vh;
