--- a/Frontend/views/modificarProductos.ejs
+++ b/Frontend/views/modificarProductos.ejs
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1>Modifica la informacion del Producto</h1>
-    <form action="/modificarProducto/<%= producto.ID %>" method="POST">
+    <form action="/admin/modificarProducto/<%= producto.ID %>" method="POST">
         <label for="nombre">Nombre del producto:</label>
         <input type="text" id="nombre" name="nombre" required value="<%= producto.nombre %>"><br>
 
         <label for="precio">Precio:</label>
-        <input type="number" id="precio" name="precio" step="0.01" required value="<%= producto.precio %>"><br>
+        <input type="number" id="precio" name="precio" step="0.1" required value="<%= producto.precio %>"><br>
 
         <label for="categoryid">Categoría ID:</label>
         <input type="number" id="categoryid" name="categoryid" required value="<%= producto.categoria %>"><br>
@@ -23,7 +23,7 @@
 
         <button type="submit" onclick="return validarProducto() && confirm('¿Estás seguro de que deseas guardar los cambios?')">Guardar cambios</button>
     </form>
-    <h2>Regresar <a href="/manipularProductos">a la gestión de productos</a></h2>
+    <h2>Regresar <a href="/admin/manipularProductos">a la gestión de productos</a></h2>
     <script src="/js/validaciones.js"></script>
 </body>
 </html>
