Se edito el css

--- a/Frontend/views/cuenta.ejs
+++ b/Frontend/views/cuenta.ejs
@@ -16,6 +16,6 @@
         <a href="/editarCuenta/<%= usuario.ID %>">Editar cuenta</a>
         <a href="/iniciarSs">Cerrar sesión</a>
     </div>
-    <a href="/?usuarioID=<%= usuario.ID %>">Regresar a la tienda</a>
+    <a href="/?usuarioID=<%= usuario.ID %>" class="btn-iniciar-sesion">Regresar a la tienda</a>
 </body>
 </html>
