--- a/Frontend/views/iniciarSs.ejs
+++ b/Frontend/views/iniciarSs.ejs
@@ -33,7 +33,7 @@
         </form>
         <h3>No tienes cuenta? <a href="/crearAcc">Regístrate aquí</a></h3>
     </div>
-    <a href="/">Regresar a la tienda</a>
+    <a href="/" class="btn-iniciar-sesion">Regresar a la tienda</a>
 
     <!-- Decoración flotante lateral -->
     <div class="side-decoration">
